--- a/school/school/school.csproj
+++ b/school/school/school.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\SchoolProject.Core\SchoolProject.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
